# Sonner-Studio-Language_SSL

./: .gitignore  BENCHMARKS.md  BUILD_RELEASE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREATE_RELEASE.md  Cargo.toml  DOCUMENTATION.md  DOCUMENTATION_DE.md  DOCUMENTATION_ES.md  DOCUMENTATION_FR.md  DOCUMENTATION_JA.md  DOCUMENTATION_PT.md  EXAMPLES.md  FACEBOOK_ANNOUNCEMENT.md  GITHUB_RELEASE.md  GIT_RELEASE_COMMANDS.md  INSTALL.md  INSTALLATION.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  LICENSE_DE.md  LICENSE_ES.md  LICENSE_FR.md  LICENSE_JA.md  LICENSE_PT.md  OLLAMA_TEST.md  PUBLISH_PACKAGE.md  README.md  README_AR.md  README_CS.md  README_DE.md  README_EN.md  README_ES.md  README_FR.md  README_HE.md  README_HR.md  README_HU.md  (+62 more)
.github/: pull_request_template.md
docs/: BENCHMARKS.md  CHANGELOG_V3.0.md  CODE_OF_CONDUCT.md  COMPILER_GUIDE.md  COMPILER_HANDBUCH_DE.md  CONTRIBUTING.md  DEVELOPMENT.md  DEVELOPMENT_PROGRESS_2026.md  DEVLOG.md  DEVLOG_PHASE8.md  FEATURE_REFERENCE.md  GETTING_STARTED.md  GETTING_STARTED_DE.md  GOVERNANCE.md  HANDBUCH.md  INSTALLATION.md  KERNEL_ARCH_RESEARCH.md  LANGUAGE_REFERENCE.md  MANUAL.md  MANUAL_DE.md  MANUAL_EN.md  MIGRATION_GUIDE_v3.md  MOBILE_GUIDE.md  NLP_GUIDE.md  NLP_LEITFADEN_DE.md  OLLAMA_INTEGRATION.md  PLUGIN_GUIDE.md  README.md  RELEASE_INSTRUCTIONS_v0.1.0.md  RELEASE_INSTRUCTIONS_v2.0.0.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v2.0.0.md  RESTORATION_LOG_v932.md  ROADMAP_EXPANDED.md  SPRACHREFERENZ_DE.md  SSL_3.0_SPECIFICATION.md  SSL_EIGENSCHAFTEN_UND_FUNKTIONEN_KOMPLETT.md  SSL_v6_SPEC.md  TYPE_SYNTAX.md  V2.0_FEATURES.md  (+20 more)
examples/: README.md  ai_review_demo.ssl  composition.ssl  crdt_demo.ssl  data_processor.ssl  debug_demo.ssl  debug_minimal.ssl  distributed_compute.ssl  distributed_demo.ssl  edge_api.ssl  effects_demo.ssl  eval_demo.ssl  fail_immutable.ssl  fibonacci.ssl  formal_verify.ssl  functional_list.ssl  functional_map.ssl  functional_pipeline.ssl  gpu_compute.ssl  hotreload_demo.ssl  immutability_test.ssl  immutable_patterns.ssl  inlining_test.ssl  kernel_hello.ssl  linear_types_demo.ssl  math.ssl  mobile_demo.ssl  modern_demo.ssl  optimizations_test.ssl  parallel_fib.ssl  partial_application.ssl  performance_demo.ssl  pipe_args.ssl  pipe_simple.ssl  property_test_demo.ssl  quantum_random.ssl  reactive_demo.ssl  simple_list_test.ssl  simple_map_test.ssl  simple_partial.ssl  (+8 more)
linker/: apple_intel.ld  apple_silicon.ld  arm64.ld  steam_deck.ld  x86_64.ld
readme-versions/: README.md  README_AR.md  README_CS.md  README_DE.md  README_ES.md  README_FR.md  README_HE.md  README_HR.md  README_HU.md  README_IT.md  README_JA.md  README_PL.md  README_PT.md  README_RU.md  README_SK.md  README_ZH.md
release/: README.md  SHA256SUMS.txt  ssl-windows-x64.zip.sha256  test.ssl
spec/: grammar.ebnf
src/: ast.rs  cli.rs  interpreter.rs  (+7 more)
ssl-v9/: Cargo.toml  PRIVACY_POLICY.md  SHOWCASE.md  STORE_DESCRIPTION.md  WHATS_NEW.md  comparative_test.ssl  debug_manifest.py  index.html  make_hero_landscape.ps1  make_store_art.ps1  make_store_logo.ps1  make_store_tiles.ps1  make_super_hero.ps1  modern_demo.ssl  resize_assets.ps1  ssl-v9_9.0.0.0_x64.msix  ssl-v9_9.1.0.0_x64.msix  test_asset_protocol.ssl  test_gui.ssl  test_module.js
ssl-v9/msix/: AppxManifest.xml  modern_demo.ssl
ssl-v9/src/: ast.rs  benchmarks.rs  cli.rs  interpreter.rs  interpreter.rs.backup  lexer.rs  lib.rs  main.rs  parser.rs  parser_chunk.rs
ssl-v9/src/ai/: provider.rs  refactor.rs  reviewer.rs  testgen.rs
ssl-v9/src/crdt/: counter.rs
ssl-v9/src/debugger/: mod.rs  ui.rs
ssl-v9/src/hotreload/: replacer.rs
ssl-v9/src/mobile/android/: mod.rs
ssl-v9/src/mobile/ios/: mod.rs
ssl-v9/src/nil/: matcher.rs  normalizer.rs
ssl-v9/src/property_test/: generators.rs
ssl-v9/src/reactive/: operators.rs  scheduler.rs
ssl-v9/src/render/: animation.rs  audio.rs  bloom.rs  bloom.wgsl  bloom_resize_stub.rs  compute.rs  compute.wgsl  deferred.rs  deferred.wgsl  deferred_geometry.wgsl  deferred_lighting.wgsl  dof.rs  dof.wgsl  frustum.rs  lod.rs  mod.rs  outlines.rs  outlines.wgsl  particles.rs  particles.wgsl  particles_compute.wgsl  particles_render.wgsl  physics.rs  post.rs  post.wgsl  post_effects.rs  post_effects.wgsl  raytrace.wgsl  raytracer.rs  scene.rs  shader.wgsl  shadow.wgsl  skinning.wgsl  ssao.rs  ssao.wgsl  ssgi.rs  ssgi.wgsl  ssr.rs  ssr.wgsl  state.rs  (+3 more)
ssl-v9/src/render/xr/: mod.rs  session.rs  stereoscopic.rs  tracking.rs
ssl-v9/src/security/: manager.rs  mod.rs
ssl-v9/src/stdlib/: env.rs  fs.rs  json.rs  mod.rs  string.rs  uuid.rs
ssl-v9/src/telemetry/: mod.rs
ssl-v9/src/verify/: mod.rs
ssl-v9/src/wasm/: js_interop.rs
ssl-v9/stdlib/db/: sonnerstudio_sql.ssl
(+360 files in other folders)
