[package]
name = "ssl"
version = "7.0.0"
edition = "2021"
authors = ["SonnerStudio <dev@sonnerstudio.com>"]
description = "Sonner Studio Language v7.0 - Native Compilation Edition with Multi-Architecture Support"
homepage = "https://github.com/SonnerStudio/SSL"
repository = "https://github.com/SonnerStudio/SSL"
documentation = "https://github.com/SonnerStudio/SSL/tree/main/docs"
readme = "README.md"
keywords = ["compiler", "programming-language", "native-compilation", "multi-architecture", "nlp"]
categories = ["compilers", "development-tools", "command-line-utilities"]
license = "Apache-2.0"
exclude = [
    # Exclude proprietary compiler source
    "ssl-v7/src/*",
    "ssl-v5/*",
    "ssl-v6/*",
    "*.log",
    "*.tmp",
    "build/*",
    "target/*",
]

[[bin]]
name = "ssl"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[package.metadata.docs.rs]
all-features = true

[package.metadata.wix]
upgrade-guid = "12345678-1234-1234-1234-123456789012"
path-guid = "87654321-4321-4321-4321-210987654321"
license = false
eula = false
